<resources>
    <string name="app_name">BLE Golf Ball</string>
    <string name="title_activity_control">ControlActivity</string>

    <string name="no_ble">BLE not supported</string>

    <!-- Misc items -->
    <string name="zero">0</string>
    <string name="refreshText">Pull Down to Refresh</string>
    <string name="numberofRolls">Number of Rolls</string>
    <string name="rollDistance">Roll Distance </string>
    <string name="BallVelocity">Battery</string>
    <string name="accelerationX">Last Missed Putt</string>

    <string name="puttsMade">Stimp</string>
    <string name="bootload">Bootload</string>
    <string name="battery">Battery</string>

    <string name="setdistance">0.0</string>

    <string name="readyState">Current State</string>

    <string name="drillsbutton">D\n R\n I\n L\n L\n S\n</string>



    <string-array name="puttslope">
        <item>Level</item>
        <item>Downhill</item>
        <item>Uphill</item>
        <item>L to R</item>
        <item>R to L</item>
    </string-array>


    <string-array name="puttstimp">
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>

    <string-array name="slope_array">
        <item>-5</item>
        <item>-4</item>
        <item>-3</item>
        <item>-2</item>
        <item>-1</item>
        <item>level</item>
        <item>+1</item>
        <item>+2</item>
        <item>+3</item>
        <item>+4</item>
        <item>+5</item>
    </string-array>

    <string-array name="numbers">
        <item>DAY</item>
        <item>WEEK</item>
        <item>MONTH</item>
        <item>YEAR</item>
        <item>Five</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="signin_other_error">sign-in error</string>

</resources>
